--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 html,body{
     height: 100%;
     width: 100%;
+    scroll-behavior: smooth;
+    scroll-padding-top: 10vh;
 }
 
 body::-webkit-scrollbar{
@@ -35,7 +37,12 @@ main{
     transition: all 0.1s ease-out  0s;
     display: none;
     pointer-events: none;
+    font-size: 70%;
+    line-height: 2vw;
+    text-align: center;
 }
+
+/* ----------------------------------HERO_CONTAINER BELOW------------------------ */
 
 .hero-container{
     height: 100vh;
@@ -68,6 +75,7 @@ main{
 .hero-nav a{
     text-decoration: none;
     color: white;
+    /* transform: translateY(-100%); */
 
 }
 
@@ -82,10 +90,23 @@ main{
 }
 
 .head_box1 h1{
+    position: relative;
     color: rgba(255, 255, 255, 0.6);
     font-size: 11vw ;
     margin-left: 3.2vw;
     line-height: 0.9;
+    transform: translateY(101%);
+    transition: transform 1s ease-out 0.1s;
+}
+
+.move-h1{
+    /* background-color: red; */
+    overflow: hidden;
+}
+
+.show-h-box-h1:nth-child(n){
+    transform: translateY(0);
+    
 }
 
 
@@ -140,11 +161,10 @@ main{
 
 
 .hero-arrows{
-    justify-content: end;
-    display: none;
+    opacity: 0;
 }
 
-.hero-arrows div{
+.hero-arrows a{
     height: 25px;
     width: 25px;
     background-color:rgba(255, 255, 255, 0.6) ;
@@ -155,18 +175,46 @@ main{
     color: black;
 }
 
+.hero-arrows a:hover{
+    background-color: #ffffffe0;
+}
+
+.hero-end{
+    opacity: 0;
+    transition: opacity 1s ease-out 1s;
+}
+
+.hero-end-show{
+    opacity: 1;
+}
+
+.move-head-ele >*{
+    transform: translateY(-100%);
+    transition: transform 0.5s ease-out 0.5s;
+}
+
+.move-head-ele{
+    overflow: hidden;
+}
+
+.move-head-ele-show{
+    transform: translateY(0);
+}
 
 
-.work-container{
+/* --------------------WORK_HEADINGS CONTAINER BELOW----------------------- */
+
+#work-container{
     padding: 0 3vw;
     margin: 10rem 0 10rem 0;
 }
 
-.work-container img{
+#work-container img{
     display: none;
     position: absolute;
-    max-width: 30%;
+    max-width: 25%;
     pointer-events: none;
+    transition: all 0.1s linear;
 }
 
 .work_boxes{
@@ -187,6 +235,18 @@ main{
     border-bottom: 1px solid rgba(255, 255, 255, 0.6);
 }
 
+.work_boxes:hover *:not(img){
+    color: rgba(255, 255, 255, 0.2) ;
+    transition: all 0.6s ease-out 0.05s ;
+}
+
+.work_boxes:hover *:not(img,h5){
+    transform: translateX(30px);
+}
+
+
+/* ----------------------------ABOUT_ME CONTAINER BELOW------------------------------- */
+
 .about-me{
     color: white;
     display: flex;
@@ -196,7 +256,7 @@ main{
 }
 
 .about-me h5,
-.last-container h5{
+#last-container h5{
     color:rgba(255, 255, 255, 0.6) ;
     text-transform: uppercase;
     font-weight: 300;
@@ -223,11 +283,11 @@ main{
     
 }
 
-/* .about-me a:hover{
+.about-me a:hover{
     background-color: white;
     color: black;
     z-index: 102;
-} */
+}
 
 .about-me div:first-child{
     flex: 1;
@@ -240,7 +300,9 @@ main{
     padding: 1rem;
 }
 
-.last-container{
+/* -------------------------------LAST_CONTAINER BELOW-------------------------------- */
+
+#last-container{
     color: white;
     display: flex;
     flex-direction: column;
@@ -280,10 +342,34 @@ main{
     font-size: 14px;
 }
 
+.arrow-ele{
+    position: relative;
+}
+
+.arrow-ele::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1.5px;
+    background-color: #fff;
+    transform: scale(0);
+    transform-origin: bottom left;
+    transition: all 0.5s ease-out;
+}
+
+.arrow-ele:hover::after{
+    transform: scaleX(100%);
+}
+
+/* -------------------------------------------MEDIA_QUERIES BELOW---------------------------- */
 
 @media (min-width : 770px){
     .hero-arrows{
         display: flex;
+        justify-content: end;
+        opacity: 1;
     }
     .hero-end span{
         display: inline-block;
