--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body::-webkit-scrollbar{
 }
 
 body{
-    background-color: black;
+    background-color: grey;
 }
 
 main{
@@ -42,12 +42,49 @@ main{
     text-align: center;
 }
 
+.loading-box{
+    height: 100vh;
+    width: 100%;
+    /* position: absolute; */
+    background-color: grey;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    z-index: 101;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: none;
+}
+
+.loading-box *{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
+    font-size: larger;
+}
+
+
+#load{
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: white;
+    height: 2px;
+    width: 80px;
+}
+
+#load::-webkit-slider-thumb{
+    appearance: none;
+}
+
+.hide-load{
+    display: flex;
+}
+
+
 /* ----------------------------------HERO_CONTAINER BELOW------------------------ */
 
 .hero-container{
     height: 100vh;
     width: 100%;
     color: white;
+    visibility: none !important;
 }
 
 .hero-container h5{
@@ -79,9 +116,18 @@ main{
 
 }
 
+.hide-nav{
+    display: none;
+}
+
+.extra{
+    height: 27vh;
+    width: 100%;
+}
+
 .hero-headings{
-    height: 90vh;
-    padding-top: 175px;
+    height: 63vh;
+    /* padding-top: 175px; */
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -92,7 +138,8 @@ main{
 .head_box1 h1{
     position: relative;
     color: rgba(255, 255, 255, 0.6);
-    font-size: 11vw ;
+    font-size: clamp(50px,11vw,140px) ;
+    font-weight: 600;
     margin-left: 3.2vw;
     line-height: 0.9;
     transform: translateY(101%);
@@ -415,4 +462,5 @@ main{
     }
     
 }
+
 
